@@ -1,6 +1,7 @@
 Changes for 3.4.0alpha1
 
 New features:
+...G...... [ZBXNEXT-3930] improved log monitoring by adjusting formula to process 10 times more new lines than set in MaxLinesPerSecond (vso)
 A.F..J.PS. [ZBXNEXT-1274] added support of configurable jmx endpoint url for jmx items (gcalenko, Ivo, Sasha, vso)
 ........S. [ZBXNEXT-3872] implemented new internal item 'zabbix[host,discovery,interfaces]' (Andris)
 A.F....... [ZBXNEXT-3869] implemented map lines (vjaceslavs)
